# llm-wiki-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/agents/: adversarial-reviewer.md  implementer.md  quality-engineer.md  security-reviewer.md
.claude/skills/: README.md
.github/workflows/: agent-artifacts.yml  check-sync.yml  ci.yml  evals.yml  wheel-acceptance.yml
core/: primitive.yaml
core/files/: .gitignore  AGENTS.md  frontmatter.schema.yaml
docs/: CHARTER.md  CONVENTIONS.md  README.md  ROADMAP.md  backlog.md  comparison.md  repo-structure.md
docs/_templates/: spec.md
docs/adr/: 0002-journal-as-state-truth.md  0004-drift-detection-and-proposal-flow.md  0008-init-adopt-ownership-policy.md  0009-headless-claude-invocation-contract.md  0010-agent-passthrough-via-claude-agent-flag.md  0011-genre-subtype-facets-replace-fused-type.md
docs/architecture/: overview.md  starters.md
docs/design/: family.md  personal.md  research-layer.md  work.md
docs/guides/: customizing.md  file-formats.md  inventories.md  setup.md  sync-options.md  web-clipper.md
docs/knowledge/: README.md  patterns.jsonl
docs/rfc/: 0001-v2-architecture.md  0004-agent-identity-primitives.md  (+9 more)
examples/: regenerate.py
llm_wiki_kit/: __init__.py  adopt.py  cli.py  doctor.py  errors.py  git_init.py  ingest.py  install.py  journal.py  managed_regions.py  models.py  operations.py  primitives.py  projection.py  recipes.py  render.py  run.py  search.py  upgrade.py  write_helper.py
recipes/: family.yaml  personal.yaml  work-os.yaml
scripts/: check-sync.sh  sync-shared.sh
shared/: CLAUDE.md  CLAUDE.variant.family.md  CLAUDE.variant.personal.md  CLAUDE.variant.work.md  purpose.md
starters/: README.md  check_coverage.py  regenerate.py
tests/: conftest.py
tools/: RALPH.md  lint-agents-md.sh
(+637 files in other folders)
